--- a/frontend/src/components/pages/Cards/cards-css/presentation.css
+++ b/frontend/src/components/pages/Cards/cards-css/presentation.css
@@ -124,20 +124,19 @@
   }
 
   .personnal-presentation-paragraph {
-    margin-top: 20px;
+    margin-top: 0px;
     margin-bottom: 15px;
     text-align: justify;
   }
 }
-
-
 
 @media only screen and (max-width: 750px) {
   .presentation-card {
     flex-direction: column;
     align-items: center;
     transform: translateY(-400px);
-    margin-bottom: 200px;
+    margin-bottom: 0px;
+    margin-top: 350px;
   }
   
   .presentation-card-title {
@@ -177,6 +176,7 @@
     opacity: 0;
     font-size: 12px;
     margin-top: 0px;
+    margin-bottom: -500px;
   }
   
   .personnal-presentation-text {
@@ -190,4 +190,3 @@
     font-weight: bold;
   }
 }
-
